All-day events date shown by one day off
Description
When creating an all-day event on an Exchange server account, the date is moved one day earlier then specified. This behavior does not occur on CalDAV calendars, so I assumed it to be related to EWS.
How To Reproduce
Create an all day event on an Exchange calendar, save. The event shows up with the date specified minus one day. When opening the event, the specified date is the date on which it is shown (thus the entered date minus one day). Hence, to create an all-day event for day DD.MM, I would need to enter DD+1.YY.
Sytem
ArchLinux, Linux 5.6.7
Gnome Shell 3.36.2
Evolution 3.36.2
Edited by Milan Crha